# nixflow

./: .gitignore  Cargo.toml  default.nix  flake.nix
examples/: flake.nix  rng.nix
src/: commands.rs  main.rs  nix_environment.rs  nix_environment_2.rs  utils.rs
src/nix_environment/: commands.rs  mod.rs  native.rs  portable_distributed.rs
src/workflow/: graph.rs  mod.rs  scheduler.rs  step.rs
src/workflow/executors/: default.rs  mod.rs  slurm.rs
src/workflow/graph/: execution.rs  mod.rs  progress.rs
src/workflow/job/: mod.rs  warnings.rs
src/workflow/job/execution/: default.rs  mod.rs
src/workflow/job/execution/slurm/: mod.rs  options.rs  state.rs
src/workflow/specification/: mod.rs  parsing.rs  progress.rs
src/workflow/step/: mod.rs  progress.rs
src/workflow/step/execution/: default.rs  mod.rs  slurm.rs
