[package]
name = "nixflow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.37", features = ["derive"] }
indicatif = "0.17.11"
miette = { version = "7.6.0", features = ["fancy"] }
petgraph = "0.8.1"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
serde_with = "3.12.0"
serde_yaml = "0.9.34"
tempfile = "3.20.0"
thiserror = "2.0.12"
